fix: color for unstyled button to be readable

--- a/src/sass/ui/_button.sass
+++ b/src/sass/ui/_button.sass
@@ -39,7 +39,8 @@
   color: var(--color-background)
 
 =button
-  background: transparent
+  background: var(--color-background)
+  color: var(--color-on-background)
   border-radius: $le-radius-small
   border: none
   cursor: pointer
